# rust-club-html-parser

./: Cargo.toml  lcov.info
benches/: benchmark_html.rs
src/: lib.rs  main.rs
