[package]
name = "html-parser"
version = "0.1.0"
edition = "2021"

[dependencies]
rustc-hash = "1.1.0"
winnow = { git = "https://github.com/adamchalmers/winnow", branch = "achalmers/generalize-hashmap-constraints" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "benchmark_html"
harness = false

[profile.bench]
debug = true
